# rs-clean-architecture

./: Cargo.toml  readme.md
ch11/: factories.rs  stable_abstraction.rs
ch12/: ccp.rs  crp.rs
ch12/rep/: Cargo.toml
ch13/: rep.rs
ch13/ccp/: Cargo.toml  readme.md
ch13/ccp/src/: lib.rs
ch13/crp/: Cargo.toml
ch13/crp/src/: lib.rs
ch13/rep/: CHANGELOG.md
ch13/rep/src/: lib.rs
