workspace = { members = ["ch13/crp"] }
[package]
name = "rs-clean-architecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ch11_stable_abstraction"
path = "ch11/stable_abstraction.rs"

[[bin]]
name = "ch11_factories"
path = "ch11/factories.rs"

[[bin]]
name = "ch13_rep"
path = "ch13/rep.rs"

[[bin]]
name = "ch13_ccp"
path = "ch13/ccp.rs"

[[bin]]
name = "ch13_crp"
path = "ch13/crp.rs"

[dependencies]
rust_logger_rep = {path = "./ch13/rep"}
rust_ecommerce_ccp = {path = "./ch13/ccp"}
rust_utils_crp = {path = "./ch13/crp"}
